Add missing HAProxy settings to controller
This patch adds the missing parameters to controller.yaml

These parameters were adding to overcloud-source.yaml
in I1581c091b996422fb1374ea4c024d0a88453e10b.

Change-Id: I3e4e0e1feb521dded2679fed508fa97e8dd27661

--- a/controller.yaml
+++ b/controller.yaml
@@ -569,6 +569,8 @@ resources:
         haproxy:
           net_binds:
             - ip: {get_param: VirtualIP}
+          options:
+            - option httpchk GET /
           services:
             - name: keystone_admin
               port: 35357
@@ -593,6 +595,7 @@ resources:
             - name: glance_registry
               port: 9191
               net_binds: *public_binds
+              options: # overwrite options as glace_reg needs auth for http req
             - name: heat_api
               port: 8004
               net_binds: *public_binds
@@ -620,9 +623,12 @@ resources:
             - name: ceilometer
               port: 8777
               net_binds: *public_binds
+              options: # overwrite options as ceil needs auth for http req
             - name: swift_proxy_server
               port: 8080
               net_binds: *public_binds
+              options:
+                - option httpchk GET /info
             - name: rabbitmq
               port: 5672
               options:
