Set more aggressive keepalive timings
We want to customize the default kernel keepalive timings and
make them more aggressive to workaround lack of hearbeat support
in the Oslo RabbitMQ client, see:

https://bugs.launchpad.net/oslo.messaging/+bug/856764/comments/19
and
https://bugs.launchpad.net/oslo.messaging/+bug/856764/comments/70

Change-Id: Ieac08f595086acb8dd336e33efc705ee0b8a3a87
Closes-Bug: 1301431
Closes-Bug: 1385240
Closes-Bug: 1385234

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -929,6 +929,10 @@ resources:
               - Merge::Map:
                   controller0:
                     {get_attr: [controller0, name]}
+        sysctl:
+          net.ipv4.tcp_keepalive_time: 5
+          net.ipv4.tcp_keepalive_probes: 5
+          net.ipv4.tcp_keepalive_intvl: 1
   controller0SSLDeployment:
     type: OS::Heat::StructuredDeployment
     properties:
