--- a/overcloud-without-mergepy.yaml
+++ b/overcloud-without-mergepy.yaml
@@ -658,6 +658,10 @@ resources:
             list_join:
             - ','
             - {get_attr: [Controller, hostname]}
+        sysctl:
+          net.ipv4.tcp_keepalive_time: 5
+          net.ipv4.tcp_keepalive_probes: 5
+          net.ipv4.tcp_keepalive_intvl: 1
 
   MysqlRootPassword:
     type: OS::Heat::RandomString
