Drop the MysqlClusterUniquePart validation
Trying to use overcloud-without-mergepy currently fails with
a validation error around MysqlClusterUniquePart. This
works around the issue by temporarily dropping the validation.

Change-Id: If93945a2c3396b07b592d08efb1f66e11d6194dd
Partial-bug: #1405446

--- a/controller.yaml
+++ b/controller.yaml
@@ -170,8 +170,9 @@ parameters:
     description: A unique identifier of the MySQL cluster the controller is in.
     type: string
     default: 'unset'  # Has to be here because of the ignored empty value bug
-    constraints:
-    - length: {min: 4, max: 10}
+    # Drop the validation: https://bugs.launchpad.net/tripleo/+bug/1405446
+    # constraints:
+    # - length: {min: 4, max: 10}
   MysqlInnodbBufferPoolSize:
     description: >
         Specifies the size of the buffer pool in megabytes. Setting to
