Remove invalid NTP configuration in templates
Currently the all templates have an invalid setting for NTP
setup for the fudge setting. This should be removed from
the templates which will remove the warning seen in syslog.

ntpd[...]: inappropriate address xxx.xxx.xxx.xxx for the
    fudge command, line ignored

Partial-Bug: 1408379
Relates-To: Ib9931b84925d9ceb32f18e9adc5be64402fbf61e
Change-Id: I56a03dc0a899a8c515f2a05d678d7e80e9b7b93c

--- a/compute-config.yaml
+++ b/compute-config.yaml
@@ -68,7 +68,7 @@ resources:
           password: {get_input: rabbit_password}
         ntp:
           servers:
-              - {server: {get_input: ntp_server}, fudge: "stratum 0"}
+              - {server: {get_input: ntp_server}}
 
 outputs:
   config_id:
