--- a/controller-config.yaml
+++ b/controller-config.yaml
@@ -128,7 +128,7 @@ resources:
           rabbit_port: {get_input: rabbit_client_port}
         ntp:
           servers:
-              - {server: {get_input: ntp_server}, fudge: "stratum 0"}
+              - {server: {get_input: ntp_server}}
         virtual_interfaces:
           instances:
             - vrrp_instance_name: VI_CONTROL
