--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -688,7 +688,7 @@ resources:
           rabbit_port: {get_param: RabbitClientPort}
         ntp:
           servers:
-              - {server: {get_param: NtpServer}, fudge: "stratum 0"}
+              - {server: {get_param: NtpServer}}
         virtual_interfaces:
           instances:
             - vrrp_instance_name: VI_CONTROL
