--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -346,7 +346,7 @@ resources:
             - value
         ntp:
           servers:
-            - {server: {get_param: NtpServer}, fudge: "stratum 0"}
+            - {server: {get_param: NtpServer}}
   undercloudPassthroughConfig:
     type: OS::Heat::StructuredConfig
     properties:
