--- a/nova-compute-config.yaml
+++ b/nova-compute-config.yaml
@@ -55,7 +55,7 @@ resources:
           password: {get_input: rabbit_password}
         ntp:
           servers:
-              - {server: {get_input: ntp_server}, fudge: "stratum 0"}
+              - {server: {get_input: ntp_server}}
   NovaComputePassthrough:
     type: OS::Heat::StructuredConfig
     properties:
