Add parameter to manage usage of Neutron l3_ha option
This change will allow for the enablement of Neutron routers HA
via the new NeutronL3HA parameter.

Change-Id: Ia5f7c0b4e89159456482e840c50d166ec5f25d4c
Implements: blueprint tripleo-icehouse-ha-production-configuration

--- a/controller-config.yaml
+++ b/controller-config.yaml
@@ -87,6 +87,7 @@ resources:
           router_distributed: {get_input: neutron_router_distributed}
           mechanism_drivers: {get_input: neutron_mechanism_drivers}
           allow_automatic_l3agent_failover: {get_input: neutron_allow_l3agent_failover}
+          l3_ha: {get_input: neutron_l3_ha}
           ovs:
             enable_tunneling: {get_input: neutron_enable_tunneling}
             local_ip: {get_input: controller_host}
