--- a/nova-compute-config.yaml
+++ b/nova-compute-config.yaml
@@ -37,6 +37,7 @@ resources:
           metadata_proxy_shared_secret: {get_input: neutron_metadata_proxy_shared_secret}
           mechanism_drivers: {get_input: neutron_mechanism_drivers}
           allow_automatic_l3agent_failover: {get_input: neutron_allow_l3agent_failover}
+          l3_ha: {get_input: neutron_l3_ha}
           ovs:
             local_ip: {get_input: neutron_local_ip}
             tenant_network_type: {get_input: neutron_tenant_network_type}
