--- a/compute-config-puppet.yaml
+++ b/compute-config-puppet.yaml
@@ -91,7 +91,7 @@ resources:
                 neutron_metadata_proxy_shared_secret: {get_input: neutron_metadata_proxy_shared_secret}
                 neutron_mechanism_drivers: {get_input: neutron_mechanism_drivers}
                 neutron_allow_l3agent_failover: {get_input: neutron_allow_l3agent_failover}
-                neutron_allow_l3agent_failover: {get_input: neutron_allow_l3agent_failover}
+                neutron_l3_ha: {get_input: neutron_l3_ha}
                 neutron_public_interface_raw_device: {get_input: neutron_public_interface_raw_device}
                 admin_password: {get_input: admin_password}
                 nova::rabbit_host: {get_input: rabbit_host}
