--- a/controller.yaml
+++ b/controller.yaml
@@ -220,6 +220,10 @@ parameters:
     default: 'True'
     description: Allow automatic l3-agent failover
     type: string
+  NeutronL3HA:
+    default: 'False'
+    description: Whether to enable l3-agent HA
+    type: string
   NeutronEnableTunnelling:
     type: string
     default: "True"
