--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -295,6 +295,10 @@ parameters:
     default: 'True'
     description: Allow automatic l3-agent failover
     type: string
+  NeutronL3HA:
+    default: 'False'
+    description: Whether to enable l3-agent HA
+    type: string
   NovaComputeDriver:
     default: libvirt.LibvirtDriver
     type: string
@@ -448,6 +452,8 @@ resources:
             get_param: NeutronMechanismDrivers
         NeutronAllowL3AgentFailover:
             get_param: NeutronAllowL3AgentFailover
+        NeutronL3HA:
+            get_param: NeutronL3HA
   NovaCompute0AllNodesDeployment:
     type: FileInclude
     Path: nova-compute-instance.yaml
@@ -614,6 +620,7 @@ resources:
           router_distributed: {get_param: NeutronDVR}
           mechanism_drivers: {get_param: NeutronMechanismDrivers}
           allow_automatic_l3agent_failover: {get_param: NeutronAllowL3AgentFailover}
+          l3_ha: {get_param: NeutronL3HA}
           ovs:
             enable_tunneling: 'True'
             local_ip:
