--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -18,6 +18,23 @@ glance::registry::keystone_tenant: 'service'
 neutron::server::auth_tenant: 'service'
 neutron::agents::metadata::auth_tenant: 'service'
 cinder::api::keystone_tenant: 'service'
+swift::proxy::authtoken::admin_tenant_name: 'service'
+
+#swift
+swift::proxy::pipeline:
+  - 'catch_errors'
+  - 'healthcheck'
+  - 'cache'
+  - 'ratelimit'
+  - 'tempurl'
+  - 'formpost'
+  - 'staticweb'
+  - 'authtoken'
+  - 'keystone'
+  - 'proxy-logging'
+  - 'proxy-server'
+
+swift::proxy::account_autocreate: true
 
 # glance
 glance::api::pipeline: 'keystone'
