Puppet: Swift Storage node support
This patch implements the required changes to configure
swift storage nodes via Puppet. Similar to the overcloud
we generate the rings on each node (with the same seed).

Change-Id: I677c85b09b6e656b3ac1f938a4bd6bc7daae1755

--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -3,5 +3,5 @@ resource_registry:
   OS::TripleO::Compute: compute-puppet.yaml
   OS::TripleO::SoftwareDeployment: OS::Heat::StructuredDeployment
   OS::TripleO::Controller: controller-puppet.yaml
-  OS::TripleO::ObjectStorage: swift-storage.yaml
+  OS::TripleO::ObjectStorage: swift-storage-puppet.yaml
   OS::TripleO::Net::SoftwareConfig: net-config-bridge.yaml
