Add SwiftMinPartHours to overcloud-without-mergepy
This was added in Icc5e431a7e2884b3ca3a255b6fd901619bc98460
and is missing from overcloud-without-mergepy.

Change-Id: I1273b646c04783712fd3f8baccafead11817689c

--- a/controller.yaml
+++ b/controller.yaml
@@ -344,6 +344,10 @@ parameters:
       in the ring.
     hidden: true
     type: string
+  SwiftMinPartHours:
+    type: number
+    default: 1
+    description: The minimum time (in hours) before a partition in a ring can be moved following a rebalance.
   SwiftPartPower:
     default: 10
     description: Partition Power to use when building Swift rings
@@ -619,6 +623,7 @@ resources:
         swift:
           hash: { get_input: swift_hash_suffix }
           part-power: { get_input: swift_part_power }
+          min-part-hours: { get_input: swift_min_part_hours }
           replicas: {get_input: swift_replicas }
           service-password: { get_input: swift_password }
 
@@ -631,6 +636,7 @@ resources:
       input_values:
         swift_hash_suffix: {get_param: SwiftHashSuffix}
         swift_password: {get_param: SwiftPassword}
+        swift_min_part_hours: {get_param: SwiftMinPartHours}
         swift_part_power: {get_param: SwiftPartPower}
         swift_replicas: { get_param: SwiftReplicas}
 
