--- a/overcloud-without-mergepy.yaml
+++ b/overcloud-without-mergepy.yaml
@@ -370,6 +370,10 @@ parameters:
     description: The password for the swift service account, used by the swift proxy services.
     type: string
     hidden: true
+  SwiftMinPartHours:
+    type: number
+    default: 1
+    description: The minimum time (in hours) before a partition in a ring can be moved following a rebalance.
   SwiftPartPower:
     default: 10
     description: Partition Power to use when building Swift rings
@@ -525,6 +529,7 @@ resources:
           SSLKey: {get_param: SSLKey}
           SSLCACertificate: {get_param: SSLCACertificate}
           SwiftHashSuffix: {get_param: SwiftHashSuffix}
+          SwiftMinPartHours: {get_param: SwiftMinPartHours}
           SwiftPartPower: {get_param: SwiftPartPower}
           SwiftPassword: {get_param: SwiftPassword}
           SwiftReplicas: { get_param: SwiftReplicas}
@@ -611,6 +616,7 @@ resources:
           NeutronNetworkType: {get_param: NeutronNetworkType}
           Flavor: {get_param: OvercloudSwiftStorageFlavor}
           HashSuffix: {get_param: SwiftHashSuffix}
+          MinPartHours: {get_param: SwiftMinPartHours}
           PartPower: {get_param: SwiftPartPower}
           Password: {get_param: SwiftPassword}
           Image: {get_param: SwiftStorageImage}
