--- a/swift-storage.yaml
+++ b/swift-storage.yaml
@@ -70,6 +70,10 @@ parameters:
   NeutronNetworkType:
     default: gre
     type: string
+  MinPartHours:
+    type: number
+    default: 1
+    description: The minimum time (in hours) before a partition in a ring can be moved following a rebalance.
   PartPower:
     default: 10
     description: Partition Power to use when building Swift rings
@@ -107,6 +111,7 @@ resources:
         swift:
           hash: { get_input: swift_hash_suffix }
           part-power: { get_input: swift_part_power }
+          min-part-hours: { get_input: swift_min_part_hours }
           replicas: {get_input: swift_replicas }
           service-password: { get_input: swift_password }
         neutron:
@@ -150,6 +155,7 @@ resources:
         swift_hash_suffix: {get_param: HashSuffix}
         swift_mount_check: {get_param: MountCheck}
         swift_password: {get_param: Password}
+        swift_min_part_hours: {get_param: MinPartHours}
         swift_part_power: {get_param: PartPower}
         swift_replicas: { get_param: Replicas}
 
