Add SwiftMountCheck to overcloud-without-mergepy
This was added in I36fece56bafa9fe9c4883b572687b3fc819eeae1
and is missing from overcloud-without-mergepy.

Change-Id: I5c2566cc77247574f8d687eaab8094de481a8c67

--- a/controller.yaml
+++ b/controller.yaml
@@ -344,6 +344,10 @@ parameters:
       in the ring.
     hidden: true
     type: string
+  SwiftMountCheck:
+    default: 'false'
+    description: Value of mount_check in Swift account/container/object -server.conf
+    type: boolean
   SwiftMinPartHours:
     type: number
     default: 1
@@ -623,6 +627,7 @@ resources:
         swift:
           hash: { get_input: swift_hash_suffix }
           part-power: { get_input: swift_part_power }
+          mount-check: { get_input: swift_mount_check }
           min-part-hours: { get_input: swift_min_part_hours }
           replicas: {get_input: swift_replicas }
           service-password: { get_input: swift_password }
@@ -635,6 +640,7 @@ resources:
       signal_transport: NO_SIGNAL
       input_values:
         swift_hash_suffix: {get_param: SwiftHashSuffix}
+        swift_mount_check: {get_param: SwiftMountCheck}
         swift_password: {get_param: SwiftPassword}
         swift_min_part_hours: {get_param: SwiftMinPartHours}
         swift_part_power: {get_param: SwiftPartPower}
