--- a/swift-storage.yaml
+++ b/swift-storage.yaml
@@ -112,6 +112,7 @@ resources:
           hash: { get_input: swift_hash_suffix }
           part-power: { get_input: swift_part_power }
           min-part-hours: { get_input: swift_min_part_hours }
+          mount-check: { get_input: swift_mount_check }
           replicas: {get_input: swift_replicas }
           service-password: { get_input: swift_password }
         neutron:
