Puppet: Switch glance to use a swift backend
Now that we have swift we can switch glance over
to make use of it.

Change-Id: I9513cb63079235337b684aa734af73a0f0cc0afd

--- a/controller-puppet.yaml
+++ b/controller-puppet.yaml
@@ -605,6 +605,8 @@ resources:
                 glance::registry::database_connection: {get_input: glance_dsn}
                 glance::registry::bind_host: {get_input: controller_host}
                 glance::registry::auth_host: {get_input: controller_virtual_ip}
+                glance::backend::swift::swift_store_user: service:glance
+                glance::backend::swift::swift_store_key: {get_input: glance_password}
                 # Heat
                 heat_password: {get_input: heat_password}
                 heat_stack_domain_admin_password: {get_input: heat_stack_domain_admin_password}
