--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -38,8 +38,12 @@ swift::proxy::account_autocreate: true
 
 # glance
 glance::api::pipeline: 'keystone'
+glance::api::known_stores:
+  - glance.store.filesystem.Store
+  - glance.store.swift.Store
 glance::registry::pipeline: 'keystone'
 glance::registry::manage_service: true
+glance::backend::swift::swift_store_create_container_on_put: true
 
 # neutron
 neutron::core_plugin: 'ml2'
