--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -1,7 +1,6 @@
 resource_registry:
   OS::TripleO::BlockStorage: cinder-storage.yaml
-  OS::TripleO::Compute: compute.yaml
-  OS::TripleO::Compute::SoftwareConfig: compute-config-puppet.yaml
+  OS::TripleO::Compute: compute-puppet.yaml
   OS::TripleO::SoftwareDeployment: OS::Heat::StructuredDeployment
   OS::TripleO::Controller: controller-puppet.yaml
   OS::TripleO::ObjectStorage: swift-storage.yaml
