Puppet: Cinder common block storage support
This patch implements the required changes to configure
common Cinder block storage nodes via Puppet.

Change-Id: Iac8b4679a00f58d5faac4a1d08b7a830f0360ba5

--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -1,5 +1,5 @@
 resource_registry:
-  OS::TripleO::BlockStorage: cinder-storage.yaml
+  OS::TripleO::BlockStorage: cinder-storage-puppet.yaml
   OS::TripleO::Compute: compute-puppet.yaml
   OS::TripleO::SoftwareDeployment: OS::Heat::StructuredDeployment
   OS::TripleO::Controller: controller-puppet.yaml
