Puppet: Ceilometer controller support
This patch adds support for the Ceilometer controller
role including the Ceilometer:

 -API
 -central agent
 -alarm notifier
 -alarm evaluator
 -collector
 -expirer

In order to enable swift metering the swift::proxy ceilometer middleware
was added in.

Also, a minor adjustment to the existing ceilometer HA proxy setting
was made to accommodate ceilometer auth settings. (not exactly sure
why but this seems to be required)

Like upstream TripleO Ceilometer is currently using a MySQL database
backend. A follow on patch can support configuring MongoDB for use
with Ceilometer.

Change-Id: I4e171274bd7679d386d93492d13dfa7c5d37f6a8

--- a/controller-puppet.yaml
+++ b/controller-puppet.yaml
@@ -535,7 +535,6 @@ resources:
         swift_min_part_hours: {get_param: SwiftMinPartHours}
         swift_mount_check: {get_param: SwiftMountCheck}
 
-
   # Map heat metadata into hiera datafiles
   ControllerConfig:
     type: OS::Heat::StructuredConfig
@@ -658,9 +657,15 @@ resources:
                 neutron_dnsmasq_options: {get_input: neutron_dnsmasq_options}
                 neutron_dsn: {get_input: neutron_dsn}
                 # Ceilometer
-                ceilometer_metering_secret: {get_input: ceilometer_metering_secret}
-                ceilometer_password: {get_input: ceilometer_password}
-                ceilometer_dsn: {get_input: ceilometer_dsn}
+                ceilometer::metering_secret: {get_input: ceilometer_metering_secret}
+                ceilometer::rabbit_userid: {get_input: rabbit_username}
+                ceilometer::rabbit_password: {get_input: rabbit_password}
+                ceilometer::rabbit_host: {get_input: controller_virtual_ip}
+                ceilometer::api::host: {get_input: controller_host}
+                ceilometer::api::keystone_password: {get_input: ceilometer_password}
+                ceilometer::api::keystone_host: {get_input: controller_virtual_ip}
+                ceilometer::db::database_connection: {get_input: ceilometer_dsn}
+                ceilometer::agent::auth::auth_password: {get_input: ceilometer_password}
                 snmpd_readonly_user_name: {get_input: snmpd_readonly_user_name}
                 snmpd_readonly_user_password: {get_input: snmpd_readonly_user_password}
                 # Nova
@@ -699,6 +704,7 @@ resources:
                 tripleo::loadbalancer::mysql: true
                 tripleo::loadbalancer::rabbitmq: true
                 tripleo::loadbalancer::swift_proxy_server: true
+                tripleo::loadbalancer::ceilometer: true
 
   # NOTE(dprince): this example uses a composition class
   # on the puppet side (loadbalancer.pp). This seemed like the
