--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -19,6 +19,7 @@ neutron::server::auth_tenant: 'service'
 neutron::agents::metadata::auth_tenant: 'service'
 cinder::api::keystone_tenant: 'service'
 swift::proxy::authtoken::admin_tenant_name: 'service'
+ceilometer::api::keystone_tenant: 'service'
 
 #swift
 swift::proxy::pipeline:
@@ -29,6 +30,7 @@ swift::proxy::pipeline:
   - 'tempurl'
   - 'formpost'
   - 'staticweb'
+  - 'ceilometer'
   - 'authtoken'
   - 'keystone'
   - 'proxy-logging'
