--- a/puppet/hieradata/object.yaml
+++ b/puppet/hieradata/object.yaml
@@ -9,3 +9,8 @@ swift::storage::all::container_pipeline:
 swift::storage::all::account_pipeline:
   - healthcheck
   - account-server
+
+swift::proxy::keystone::operator_roles:
+  - admin
+  - swiftoperator
+  - ResellerAdmin
